docs: add more docs

--- a/docs/blog/2019-05-30-welcome.md
+++ b/docs/blog/2019-05-30-welcome.md
@@ -1,11 +1,11 @@
 ---
 slug: welcome
-title: Welcome
-author: Yangshun Tay
-author_title: Front End Engineer @ Facebook
-author_url: https://github.com/yangshun
-author_image_url: https://avatars0.githubusercontent.com/u/1315101?s=400&v=4
-tags: [facebook, hello, docusaurus]
+title: Declarative THREE.js in Angular
+author: Chau Tran
+author_title: Engineer
+author_url: https://github.com/nartc
+author_image_url: https://avatars.githubusercontent.com/u/25516557?v=4
+tags: [angular, threejs]
 ---
 
 Blog features are powered by the blog plugin. Simply add files to the `blog` directory. It supports tags as well!
