--- a/packages/storybook/src/lib/docs/intro.stories.mdx
+++ b/packages/storybook/src/lib/docs/intro.stories.mdx
@@ -1,12 +1,37 @@
-import { Meta } from '@storybook/addon-docs';
+import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title={'Introduction/Introduction'} parameters={{ viewMode: 'docs' }} />
+
+<div
+  style={{
+    display: 'flex',
+    flexDirection: 'column',
+    alignItems: 'center',
+    justifyContent: 'center',
+    marginBottom: '3rem',
+  }}
+>
+  <img
+    src={'/ngt-logo.svg'}
+    width={320}
+    height={320}
+    alt={'Angular Three Logo'}
+  />
+  <em>
+    <small>
+      "What happened to Angular 3.0? Well, it became Angular Three" - Mike
+      Hartington
+    </small>
+  </em>
+</div>
+
+<Canvas>
+  <Story id="introduction-examples--simple-cube" height="480px" />
+</Canvas>
 
 ## What is Angular Three (NGT)?
 
 **Angular Three** is a **Component Library** that wraps around [THREE.js](https://threejs.org/) to provide a declarative approach to building 3D applications using [Angular](https://angular.io/) capabilities.
-
-> Both Angular and THREE.js skills are required to use NGT. Fundamental understanding of both will help you to understand the concepts and the implementation of NGT.
 
 ## Why is it good to use NGT?
 
@@ -14,25 +39,22 @@ Utilizing Template-less Directives to build 3D scenes declaratively with accessi
 
 ## How does NGT work?
 
-NGT relies heavily on [Hierarchical Dependency Injection](https://angular.io/guide/hierarchical-dependency-injection) to allow for declarative creation of THREE.js objects on the template. Take a look at the [SimpleCube example](?path=/story/introduction-examples--simple-cube).
+NGT relies heavily on [Hierarchical Dependency Injection](https://angular.io/guide/hierarchical-dependency-injection) to allow for declarative creation of THREE.js objects on the template. Take a look at the [SimpleCube example](?path=/story/introduction-examples--simple-cube). We will explore in more detailed what is happening under the hood.
 
-Now that you've seen the `SimpleCube` in action, let's examine its code:
+## What is the difference between NGT and React Three Fiber?
 
-```html
-<ngt-canvas>
-  <ngt-mesh
-    #mesh="ngtMesh"
-    (animateReady)="
-        mesh.mesh.rotation.x = mesh.mesh.rotation.x + 0.01;
-        mesh.mesh.rotation.y = mesh.mesh.rotation.y + 0.01
-      "
-  >
-    <ngt-mesh-basic-material
-      [parameters]="{ color: 'turquoise' }"
-    ></ngt-mesh-basic-material>
-    <ngt-box-geometry></ngt-box-geometry>
-  </ngt-mesh>
-</ngt-canvas>
-```
+Many points in comparison with R3F listed here in [Svelte Cubed](https://svelte-cubed.vercel.app/docs/faqs#how-is-it-different-from-x-react-three-fiber) (a Svelte-based THREE.js library) also applies to NGT.
 
-> Due to Storybook limitation, the `(animateReady)` is handled inline, but you should make a method (eg: `onAnimateReady(mesh.mesh)`) to handle this Output
+[React Three Fiber](https://github.com/pmndrs/react-three-fiber) (R3F) is a **Renderer** that treats THREE.js as native elements. Hence, it does not **wrap** anything, providing a **clean** surface API, and future-proof from THREE.js version changes.
+
+On the other hand, NGT is a **Component Library** which means for almost each THREE.js entity, there is a corresponding entity (whether it is a Component or a Directive) in NGT. The bulk of the entities in NGT are **Single-Component-as-Module** to be best for Tree-shaking. For maintainability, NGT also **generates** most of these entities which makes it possible to keep up with THREE.js version changes.
+
+Rendering the THREE.js scene is done **outside** of the Angular Zone. In the future when [Zone-less](https://angular.io/guide/roadmap#leverage-full-framework-capabilities-with-zonejs-opt-out) is available, NGT will be able to provide even better experience to the consumers.
+
+> Zone-less is actually available today, but it requires more understanding and a lot of hoops to jump through to get it to work flawlessly.
+
+It is worth noting that NGT is heavily inspired by R3F. Many of the concepts and features of NGT are ported from R3F.
+
+## Before we start
+
+- Understand the fundamentals of Angular and THREE.js. Consult [Angular Docs](https://angular.io/docs) and [THREE.js Docs](https://threejs.org/docs/index.html) for more information.
