--- a/packages/storybook/src/lib/introduction/docs/installation.stories.mdx
+++ b/packages/storybook/src/lib/introduction/docs/installation.stories.mdx
@@ -50,7 +50,7 @@ yarn add @ngrx/component-store
 ## Ecosystem
 
 - `@angular-three/core`: THREE.js core entities. Most of the exports from `THREE` namespace are provided by **core** package.
-- `@angular-three/soba`_: A set of helpers, utilities, and extra entities that are complimentary to `@angular-three/core`. Also, **soba** provides THREE.js entities that are from `three/examples/_` via [three-stdlib](https://github.com/pmndrs/three-stdlib) for better tree-shakability.
+- `@angular-three/soba`\_: A set of helpers, utilities, and extra entities that are complimentary to `@angular-three/core`. Also, **soba** provides THREE.js entities that are from `three/examples/*` via [three-stdlib](https://github.com/pmndrs/three-stdlib) for better tree-shakability.
 - `@angular-three/postprocessing`\*: A set of post-processing effects with `EffectComposer` and other effects from [postprocessing](https://github.com/vanruesc/postprocessing).
 - `@angular-three/cannon`: Physics support for NGT, ported from [React Three Cannon](https://github.com/pmndrs/use-cannon)
 
