--- a/packages/storybook/src/lib/introduction/docs/first-scene.stories.mdx
+++ b/packages/storybook/src/lib/introduction/docs/first-scene.stories.mdx
@@ -106,7 +106,7 @@ export class AppModule {}
 
 `ngt-canvas` takes up the dimensions of the parent element. Here, we are rendering the `ngt-canvas` in our `AppComponent` host element (`app-root`). We can wrap `ngt-canvas` with a `div` and give the `div` a fixed size.
 
-> For specific of the defaults set, please check out [CanvasComponent API]()
+> For specific of the defaults set, please check out [CanvasComponent API](?path=/docs/api-canvas--page)
 
 ## Adding a Mesh
 
@@ -306,7 +306,7 @@ export class CubeComponent {
 }
 ```
 
-Interactive with the cube and see the magic 🤯!
+Interact with the cube and see the magic 🤯!
 
 <Story
   id="introduction-examples-first-scene--spinning-cube-states"
