--- a/packages/storybook/src/lib/api/docs/controller.stories.mdx
+++ b/packages/storybook/src/lib/api/docs/controller.stories.mdx
@@ -2,6 +2,8 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title={'API/Controllers'} parameters={{ viewMode: 'docs' }} />
 
+# Controllers
+
 This page talks about the Controller approach and how it helps with NGT
 
 TBD
