--- a/packages/storybook/src/lib/api/docs/events.stories.mdx
+++ b/packages/storybook/src/lib/api/docs/events.stories.mdx
@@ -2,6 +2,8 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title={'API/Events'} parameters={{ viewMode: 'docs' }} />
 
+# Events
+
 This page talks about how Events are constructed in NGT
 
 TBD
