--- a/packages/storybook/src/lib/api/docs/generators.stories.mdx
+++ b/packages/storybook/src/lib/api/docs/generators.stories.mdx
@@ -2,6 +2,8 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title={'API/Generators'} parameters={{ viewMode: 'docs' }} />
 
+# Generators
+
 This page talks about the Generators that generate the directives of NGT
 
 TBD
