docs(storybook): reorganize and add examples from demo to storybook as Examples

--- a/packages/storybook/src/lib/api/docs/extra-exports.stories.mdx
+++ b/packages/storybook/src/lib/api/docs/extra-exports.stories.mdx
@@ -4,5 +4,6 @@ import { Meta } from '@storybook/addon-docs';
 
 # Extra Exports
 
+This page talks about extra exports like `applyProps`, `tapEffect`, and some other utilities that `@angular-three/core` exposes.
+
 TBD
-k
