--- a/packages/storybook/src/lib/api/docs/objects.stories.mdx
+++ b/packages/storybook/src/lib/api/docs/objects.stories.mdx
@@ -11,7 +11,7 @@ In NGT, Objects are:
 
 ## Usage
 
-Any THREE.js entities can be _referenced_ by NGT by the convention: `ngt-<kebab-case-entity-name>`. For example:
+Any THREE.js entities can be _referenced_ by NGT with the following convention: `ngt-<kebab-case-entity-name>`. For example:
 
 - `ngt-mesh` creates `THREE.Mesh`
 - `ngt-box-geometry` creates `THREE.BoxGeometry`
@@ -36,6 +36,47 @@ For THREE.js core entities, symbols that can be imported from `three`, NGT group
 - Materials are imported from `@angular-three/core/materials`
 - Lights are imported from `@angular-three/core/lights`
 - ...
+
+## Hierarchy
+
+In THREE.js, many objects can add other objects as their children. For example:
+
+```ts
+group.add(mesh);
+parentGroup.add(group);
+scene.add(parentGroup);
+```
+
+In NGT, this happens automatically via **Content Project** and **Hierarchical Dependency Injection**.
+
+```html
+<ngt-canvas>
+  <ngt-group>
+    <ngt-group>
+      <ngt-mesh></ngt-mesh>
+    </ngt-group>
+  </ngt-group>
+</ngt-canvas>
+```
+
+This pseudo-template is pretty much the equivalent of the THREE.js counterpart. Via Angular DI, NGT allows these objects to provide themselves as values for a common [InjectionToken](https://angular.io/api/core/InjectionToken). Hence, the objects can inject the parent object as an `Optional` dependency.
+
+```ts
+export class NgtPseudoObject3D {
+  constructor(@Optional() private parentObject3d: NgtPseudoObject3D) {}
+}
+```
+
+If `parentObject3d` is available, then NGT will add the object to the parent object. This behavior is driven by two properties on each NGT object: `appendTo` and `appendMode`.
+
+| Property   | Description                                          | Default     |
+| ---------- | ---------------------------------------------------- | ----------- |
+| appendTo   | a `THREE.Object3D` instance to append the object to. | `undefined` |
+| appendMode | "none", "immediate", "root"                          | "immediate" |
+
+- If `appendTo` is provided, then `appendMode` is skipped.
+- If `appendMode` is `root`, then the object is appended to the Scene.
+- If `appendMode` is `none`, then the object will not be added to the graph scene.
 
 ## How to reference NGT objects in component code?
 
