--- a/packages/storybook/src/lib/introduction/docs/installation.stories.mdx
+++ b/packages/storybook/src/lib/introduction/docs/installation.stories.mdx
@@ -2,6 +2,8 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title={'Introduction/Installation'} parameters={{ viewMode: 'docs' }} />
 
+# Installation
+
 ## Compatibility Table
 
 Make sure you check the compatibility table before installing the package.
