docs(storybook): adjust the examples to show story mode on activated

--- a/packages/demo/src/app/instances/instances.mdx
+++ b/packages/demo/src/app/instances/instances.mdx
@@ -21,12 +21,13 @@ import { ChangeDetectionStrategy, Component, NgModule } from '@angular/core';
 import niceColors from 'nice-color-palettes';
 import * as THREE from 'three';
 
+const niceColor = niceColors[Math.floor(Math.random() * 100)];
 const size = 125000;
 const tempObject = new THREE.Object3D();
 const tempColor = new THREE.Color();
 const colors = new Array(size)
   .fill(undefined)
-  .map(() => niceColors[17][Math.floor(Math.random() * 5)]);
+  .map(() => niceColor[Math.floor(Math.random() * 5)]);
 
 const colorArray = Float32Array.from(
   new Array(size).fill(undefined).reduce((result, _, i) => {
