docs(storybook): change API to Core API

--- a/packages/storybook/src/lib/api/docs/canvas.stories.mdx
+++ b/packages/storybook/src/lib/api/docs/canvas.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title={'API/Canvas'} parameters={{ viewMode: 'docs' }} />
+<Meta title={'Core API/Canvas'} parameters={{ viewMode: 'docs' }} />
 
 # Canvas
 
