--- a/packages/storybook/src/lib/api/docs/extra-exports.stories.mdx
+++ b/packages/storybook/src/lib/api/docs/extra-exports.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title={'API/Extra Exports'} parameters={{ viewMode: 'docs' }} />
+<Meta title={'Core API/Extra Exports'} parameters={{ viewMode: 'docs' }} />
 
 # Extra Exports
 
