--- a/packages/storybook/src/lib/api/docs/generators.stories.mdx
+++ b/packages/storybook/src/lib/api/docs/generators.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title={'API/Generators'} parameters={{ viewMode: 'docs' }} />
+<Meta title={'Core API/Generators'} parameters={{ viewMode: 'docs' }} />
 
 # Generators
 
