--- a/packages/storybook/src/lib/api/docs/pipes.stories.mdx
+++ b/packages/storybook/src/lib/api/docs/pipes.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title={'API/Pipes'} parameters={{ viewMode: 'docs' }} />
+<Meta title={'Core API/Pipes'} parameters={{ viewMode: 'docs' }} />
 
 # Pipes
 
