--- a/packages/storybook/src/lib/api/docs/services.stories.mdx
+++ b/packages/storybook/src/lib/api/docs/services.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title={'API/Services'} parameters={{ viewMode: 'docs' }} />
+<Meta title={'Core API/Services'} parameters={{ viewMode: 'docs' }} />
 
 # Services
 
