--- a/packages/storybook/src/lib/api/docs/controller.stories.mdx
+++ b/packages/storybook/src/lib/api/docs/controller.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title={'API/Controllers'} parameters={{ viewMode: 'docs' }} />
+<Meta title={'Core API/Controllers'} parameters={{ viewMode: 'docs' }} />
 
 # Controllers
 
