--- a/packages/storybook/src/lib/api/docs/events.stories.mdx
+++ b/packages/storybook/src/lib/api/docs/events.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title={'API/Events'} parameters={{ viewMode: 'docs' }} />
+<Meta title={'Core API/Events'} parameters={{ viewMode: 'docs' }} />
 
 # Events
 
