--- a/packages/storybook/src/lib/api/docs/inputs.stories.mdx
+++ b/packages/storybook/src/lib/api/docs/inputs.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title={'API/Inputs'} parameters={{ viewMode: 'docs' }} />
+<Meta title={'Core API/Inputs'} parameters={{ viewMode: 'docs' }} />
 
 # Inputs
 
