--- a/packages/storybook/src/lib/api/docs/objects.stories.mdx
+++ b/packages/storybook/src/lib/api/docs/objects.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title={'API/Objects'} parameters={{ viewMode: 'docs' }} />
+<Meta title={'Core API/Objects'} parameters={{ viewMode: 'docs' }} />
 
 # Objects
 
