--- a/packages/storybook/src/lib/api/docs/stores.stories.mdx
+++ b/packages/storybook/src/lib/api/docs/stores.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title={'API/Stores'} parameters={{ viewMode: 'docs' }} />
+<Meta title={'Core API/Stores'} parameters={{ viewMode: 'docs' }} />
 
 # Component Stores
 
