docs(storybook): fix typo in import

--- a/packages/storybook/src/lib/introduction/docs/first-scene.stories.mdx
+++ b/packages/storybook/src/lib/introduction/docs/first-scene.stories.mdx
@@ -19,7 +19,7 @@ Full code:
 
 ```ts
 import { NgtCoreModule } from '@angular-three/core';
-import { NgtMeshodule } from '@angular-three/core/meshes';
+import { NgtMeshModule } from '@angular-three/core/meshes';
 import { NgtMeshBasicMaterialModule } from '@angular-three/core/materials';
 import { NgtBoxGeometryModule } from '@angular-three/core/geometries';
 
